syntax = "proto3";

package planning;
option go_package = "github.com/jalexanderII/zero_fintech/gen/Go/planning";

import "common/common.proto";
import "common/payment_plan.proto";
import "google/protobuf/field_mask.proto";


// CRUD Methods
message GetPaymentPlanRequest {
  string payment_plan_id = 1;
}

message ListPaymentPlanRequest {}

message ListPaymentPlanResponse {
  repeated common.PaymentPlan payment_plans = 1;
}

message UpdatePaymentPlanRequest {
  string payment_plan_id = 1;
  common.PaymentPlan payment_plan = 2;
  google.protobuf.FieldMask mask = 3;
}

message DeletePaymentPlanRequest {
  string payment_plan_id = 1;
}

message DeletePaymentPlanResponse {
  common.DELETE_STATUS status = 1;
  common.PaymentPlan payment_plan = 2;
}